# SafetyCoTHeads

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: datasets.yaml  models.yaml
docs/: ExperimentTracker.md  MIGRATION.md  RERUN_V6.md  SafetyCoTHeads_v6_result_hardening_roadmap.md  direction_a_plan.md  safety_ablation_validation.md
runs/: composite_metric_diagnostics.html  composite_metrics_report.html  human_machine_similarity_report.html  metrics_status_report.html  pqs_pareto_frontier_report.html
scripts/: _cli.py  aggregate_v6_metrics.py  aggregate_v6_reasoning.py  annotate_server.py  audit_v6_generations.py  build_metrics_report.py  check_v6_completeness.py  complete_v5_generation.py  complete_v5_judging.py  eval_pathway_judge.py  hf_dataset_card.md  judge_all_conditions.sh  make_annotation_batch.py  make_composite_insight_reports.py  make_composite_report.py  make_defence_report.py  make_experiment_matrix.py  make_human_machine_similarity_report.py  make_intro_teaser.py  make_multi_condition_report.py  make_neuron_ksweep_report.py  make_pre_post_report.py  make_qwen_side_by_side_trace_report.py  make_qwen_subset_partial_report.py  make_qwen_subset_trace_report.py  make_side_by_side_report.py  make_v4_jbb_report.py  make_v5_configs.py  make_v5_judge_manifest.py  make_v5_metrics_status_report.py  make_v5_plots.py  make_v5_safety_reasoning_report.py  merge_v5_query_metric_judge.py  parse_v6_completions.py  plot_pathway_radar.py  plot_v6_figures.py  plot_validation.py  prepare_harmthoughts_training_data.py  (+41 more)
(+718 files in other folders)
